fixed button spacing on mobile

--- a/portfolio/css/styles.scss
+++ b/portfolio/css/styles.scss
@@ -816,6 +816,10 @@ footer {
       max-width: 350px;
    }
 
+   .projects-button {
+      top: 0px;
+   }
+
    // Project boxes on home page
    .box {
       &-heading {
